[tool.poetry]
name = "authutils"
version = "7.2.0"
description = "Gen3 auth utility functions"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.13, <4.0"
cached-property = "~=1.4"
cdiserrors = "*"
cdislogging = "*"
datamodelutils = "*"
starlette = "*"
werkzeug = "*"
xmltodict = "~=0.9"

authlib = ">=1.6.5"
httpx = ">=0.23.0,<1.0.0"
pyjwt = {version = ">=2.4.0,<3.0", extras = ["crypto"]}
# specify cryptography (dependency of authlib and pyjwt) for snyk issue
cryptography = "^44.0.1"

#Pegging flask to < 2.3.3 so pytest-flask 1.2.0 (latest on 10-09-2023) could work
#https://github.com/pytest-dev/pytest-flask/issues/167
Flask = {version = "<=2.3.3", optional = true}
fastapi = {version = "^0.65.2", optional = true}

[tool.poetry.extras]
flask = ["Flask"]
fastapi = ["fastapi"]

[tool.poetry.group.dev.dependencies]
pytest = "*"
fastapi = ">=0.0.0,<1.0.0"
mock = "^4.0.2"
pytest-cov = "*"
pytest-flask = "*"
requests = "^2.23.0"
deptry = "^0.24.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.deptry]
known_first_party = ["authutils"]
extend_exclude = ["src/authutils/testing"]
