[tool.poetry]
name = "authutils"
version = "7.2.2"
description = "Gen3 auth utility functions"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.13, <4.0"
cached-property = "~=1.4"
cdiserrors = "*"
cdislogging = "*"
starlette = "*"
werkzeug = "*"
xmltodict = "~=0.9"

authlib = ">=1.6.5"
httpx = ">=0.23.0,<1.0.0"
pyjwt = {version = ">=2.4.0,<3.0", extras = ["crypto"]}
cryptography = ">=46.0.0"

Flask = {version = "*", optional = true}
fastapi = {version = "^0.65.2", optional = true}
datamodelutils = { version = "*", optional = true }

[tool.poetry.extras]
flask = ["Flask"]
fastapi = ["fastapi"]
datamodelutils = ["datamodelutils"]

[tool.poetry.group.dev.dependencies]
pytest = "*"
fastapi = ">=0.0.0,<1.0.0"
mock = "^4.0.2"
pytest-cov = "*"
pytest-flask = "*"
requests = "^2.23.0"
deptry = "^0.24.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.deptry]
known_first_party = ["authutils"]
extend_exclude = ["src/authutils/testing"]
