[tool.poetry]
name = "authutils"
version = "7.2.2"
description = "Gen3 auth utility functions"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.13, <4.0"
cached-property = "~=1.4"
cdiserrors = "*"
cdislogging = "*"
starlette = "*"
werkzeug = "*"
xmltodict = "~=0.9"

authlib = ">=1.6.5"
httpx = ">=0.23.0,<1.0.0"
pyjwt = {version = ">=2.4.0,<3.0", extras = ["crypto"]}
cryptography = ">=46.0.5"

Flask = {version = "*", optional = true}
fastapi = {version = "*", optional = true}
datamodelutils = { version = "*", optional = true }

[tool.poetry.extras]
flask = ["Flask"]
fastapi = ["fastapi"]
datamodelutils = ["datamodelutils"]

[tool.poetry.group.dev.dependencies]
pytest = "*"
mock = "*"
pytest-cov = "*"
pytest-flask = "*"
requests = "*"
deptry = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.deptry]
known_first_party = ["authutils"]
extend_exclude = ["src/authutils/testing"]
